[package]
name = "usci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
opt-level = 'z'
strip = true
lto = true

[dependencies]
rand = { version = "0.8" }
termcolor = { version = "1.1" }
clap = { version = "3.2", features = ["derive"] }